# mps

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  TODO.md  build.sh
.github/workflows/: tests.yml
src/: mps.cpp  mps.h  mps_message.h  mps_synchronized.h
tests/: CMakeLists.txt  support.h  test_distributor.cpp  test_object_tracking.cpp  test_pool_lifecycle.cpp  test_pool_messages.cpp  test_pool_thread.cpp  test_pool_workers.cpp  test_priority.cpp  test_synchronized.cpp  test_timer.cpp  test_ts_queue.cpp  test_waiter.cpp
tutorials/: mps_tutorials.cpp  mps_tutorials.h
